refactor: migrate all lombok annotations to pure standard Java 25 POJOs